--- a/root-app-builder/Makefile
+++ b/root-app-builder/Makefile
@@ -50,7 +50,7 @@ setup: go-deps
 
 # Go dependencies
 go-deps : .
-		go get -u -t $(shell go list ./... | grep -v /vendor/)
+		go get -t $(shell go list ./... | grep -v /vendor/)
 
 
 ############################
