--- a/root-app/Makefile
+++ b/root-app/Makefile
@@ -26,7 +26,7 @@ $(NAME) : $(GO_FILES)
 setup: go-deps
 
 go-deps :
-		go get -u -t $(shell go list ./... | grep -v /vendor/)
+		go get -t $(shell go list ./... | grep -v /vendor/)
 
 
 ############################
