Fix go dependencies in makefile

--- a/root-app-builder/Makefile
+++ b/root-app-builder/Makefile
@@ -2,7 +2,7 @@ NAME = root-app-builder
 IMAGE_NAME = agilestack-$(NAME)
 
 SWAGGER_SPEC = swagger.json
-GO_FILES=*.go
+GO_FILES=*.go */*/*.go
 
 
 ############################
